--- a/upload/admin/view/template/marketplace/task.twig
+++ b/upload/admin/view/template/marketplace/task.twig
@@ -85,17 +85,41 @@ $('#form-filter').on('submit', function(e) {
     $('#list').load('index.php?route=marketplace/task.list&user_token={{ user_token }}&' + url);
 });
 
+var test = function() {
+    console.log('hi');
 
+    $.ajax({
+        url: 'index.php?route=marketplace/task.start&user_token={{ user_token }}',
+        beforeSend: function() {
+            $('#button-start').button('loading');
+        },
+        complete: function() {
+            $('#button-start').button('reset');
+        },
+        success: function(json) {
+            console.log(json);
 
-this.timer = setTimeout(function(object) {
+            $('.alert-dismissible').remove();
 
+            if (json['error']) {
+                $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+            }
 
-    object.source($(object).val(), $.proxy(object.response, object));
+            if (json['success']) {
+                $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
 
-}, 150, this);
+                $('#list').load('index.php?route=marketplace/task.list&user_token={{ user_token }}&' + $('#form-filter').serialize());
+            }
+        },
+        error: function(xhr, ajaxOptions, thrownError) {
+            console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+        }
+    });
 
+    $('#list').load($('#form-task').attr('data-oc-load'));
+}
 
-
+var timer = setTimeout(test, 3000);
 
 $('#button-start').on('click', function(e) {
     $.ajax({
