--- a/upload/catalog/view/template/common/cart.twig
+++ b/upload/catalog/view/template/common/cart.twig
@@ -1,8 +1,5 @@
-<div class="dropdown d-grid">
-  <button type="button" data-bs-toggle="dropdown" class="btn btn-lg btn-dark d-block dropdown-toggle"><i class="fa-solid fa-cart-shopping"></i> {{ text_items }}</button>
-  <x-cart>
-    <ul class="dropdown-menu dropdown-menu-end p-2">
-      <li class="text-center p-4">{{ text_no_results }}</li>
-    </ul>
-  </x-cart>
-</div>
+<x-cart>
+  <ul class="p-2">
+    <li class="text-center p-4">{{ text_no_results }}</li>
+  </ul>
+</x-cart>
