--- a/upload/admin/view/stylesheet/stylesheet.scss
+++ b/upload/admin/view/stylesheet/stylesheet.scss
@@ -1,7 +1,7 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,cyrillic-ext,greek-ext,vietnamese);
 
 // Import fonts
-@import 'fonts/fontawesome/css/all.min.css';
+@import '../fonts/fontawesome/css/all.min.css';
 
 // Custom OpenCart variables
 $blue:       #1e91cf;
@@ -93,10 +93,6 @@ legend {
 
 .container-fluid {
     padding: 0 20px;
-}
-
-#form-login #alert {
-
 }
 
 #alert {
