--- a/upload/catalog/view/stylesheet/stylesheet.scss
+++ b/upload/catalog/view/stylesheet/stylesheet.scss
@@ -1,4 +1,4 @@
-@import "fonts/fontawesome/css/all.min.css";
+@import "../fonts/fontawesome/css/all.min.css";
 
 // Custom OpenCart variables
 $blue: #229ac8;
