--- a/upload/static/stylesheet/stylesheet.css
+++ b/upload/static/stylesheet/stylesheet.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import "fonts/fontawesome/css/all.min.css";
+@import "../fonts/fontawesome/css/all.min.css";
 /*!
    * Bootstrap  v5.3.7 (https://getbootstrap.com/)
    * Copyright 2011-2025 The Bootstrap Authors
