--- a/upload/admin/view/template/tool/notification.twig
+++ b/upload/admin/view/template/tool/notification.twig
@@ -112,7 +112,7 @@ $('#button-delete').on('click', function(e) {
                 if (json['success']) {
                     $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button</div>');
 
-                    $('#list').load('index.php?route=tool/notification.list&user_token={{ user_token }}');
+                    $('#list').load($('#form-notification').attr('data-oc-load'));
                 }
             },
             error: function(xhr, ajaxOptions, thrownError) {
