--- a/upload/admin/view/template/marketplace/task.twig
+++ b/upload/admin/view/template/marketplace/task.twig
@@ -99,7 +99,7 @@ $('#button-refresh').on('click', function(e) {
         success: function(html) {
             $('#list').html(html);
 
-            setTimeout(() => {
+            window.setTimeout(() => {
                 $('#button-refresh').trigger('click');
             }, 3000);
         },
