seperated js code from html

--- a/upload/catalog/view/template/checkout/checkout.twig
+++ b/upload/catalog/view/template/checkout/checkout.twig
@@ -35,4 +35,5 @@
   </div>
   {{ column_right }}
 </div>
+<script src="static/javascript/checkout.js" type="text/javascript"></script>
 {{ footer }}
