--- a/upload/catalog/view/template/account/affiliate.twig
+++ b/upload/catalog/view/template/account/affiliate.twig
@@ -226,13 +226,5 @@
       {{ content_bottom }}</div>
     {{ column_right }}</div>
 </div>
-<script type="text/javascript"><!--
-$('input[name=\'payment_method\']').on('change', function() {
-    $('.payment').hide();
-
-    $('#payment-' + this.value).show();
-});
-
-$('input[name=\'payment_method\']:checked').trigger('change');
-//--></script>
+<script src="static/javascript/affiliate.js" type="text/javascript"></script>
 {{ footer }}
