--- a/upload/catalog/view/template/account/returns_info.twig
+++ b/upload/catalog/view/template/account/returns_info.twig
@@ -96,12 +96,5 @@
     {{ column_right }}
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#history').on('click', '.pagination a', function(e) {
-    e.preventDefault();
-
-    $('#history').load(this.href);
-});
-//--></script>
-
+<script src="static/javascript/returns.js" type="text/javascript"></script>
 {{ footer }}
