--- a/upload/catalog/view/template/account/tracking.twig
+++ b/upload/catalog/view/template/account/tracking.twig
@@ -35,25 +35,5 @@
       {{ content_bottom }}</div>
     {{ column_right }}</div>
 </div>
-<script type="text/javascript"><!--
-$('#input-generator').autocomplete({
-    'source': function(request, response) {
-        return $.ajax({
-            url: 'index.php?route=account/tracking.autocomplete&customer_token={{ customer_token }}&search=' + encodeURIComponent(request) + '&tracking=' + encodeURIComponent($('#input-code').val()) + '&language={{ language }}',
-            dataType: 'json',
-            success: function(json) {
-                response($.map(json, function(item) {
-                    return {
-                        label: item['name'],
-                        value: item['link']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        $('#input-link').val(item['value']);
-    }
-});
-//--></script>
+<script src="static/javascript/affiliate.js" type="text/javascript"></script>
 {{ footer }}
