--- a/upload/admin/view/template/catalog/category.twig
+++ b/upload/admin/view/template/catalog/category.twig
@@ -45,7 +45,6 @@
                   {% endfor %}
                 </select>
               </div>
-
               <div class="mb-3">
                 <label for="input-language" class="form-label">{{ entry_language }}</label>
                 <select name="filter_language_id" id="input-store" class="form-select">
@@ -55,7 +54,6 @@
                   {% endfor %}
                 </select>
               </div>
-
               <div class="mb-3">
                 <label for="input-status" class="form-label">{{ entry_status }}</label>
                 <select name="filter_status" id="input-status" class="form-select">
@@ -81,81 +79,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-
-$('#form-filter').on('submit', function(e) {
-    e.preventDefault();
-
-    let url = $(this).serialize();
-
-    window.history.pushState({}, null, 'index.php?route=catalog/category&user_token={{ user_token }}&' + url);
-
-    $('#list').load('index.php?route=catalog/category.list&user_token={{ user_token }}&' + url);
-});
-
-$('#button-repair').on('click', function(e) {
-    e.preventDefault();
-
-    var element = this;
-
-    $.ajax({
-        url: 'index.php?route=catalog/category.repair&user_token={{ user_token }}',
-        dataType: 'json',
-        beforeSend: function() {
-            $(element).button('loading');
-        },
-        complete: function() {
-            $(element).button('reset');
-        },
-        success: function(json) {
-            if (json['error']) {
-                $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
-            }
-
-            if (json['success']) {
-                $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
-
-                $('#list').load('index.php?route=catalog/category.list&user_token={{ user_token }}');
-            }
-        },
-        error: function(xhr, ajaxOptions, thrownError) {
-            console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-        }
-    });
-});
-
-$('#input-name').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=catalog/category.autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                json.unshift({
-                    name: '{{ text_none }}',
-                    category_id: '',
-                });
-
-                response($.map(json, function(item) {
-                    return {
-                        label: item['name'],
-                        value: item['category_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        if (item['value']) {
-            $('#input-name').val(decodeHTMLEntities(item['label']));
-        } else {
-            $('#input-name').val('');
-        }
-    }
-});
-//--></script>
+<script src="static/javascript/category.js" type="text/javascript"></script>
 {{ footer }}
