--- a/upload/admin/view/template/catalog/download.twig
+++ b/upload/admin/view/template/catalog/download.twig
@@ -19,11 +19,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-//--></script>
+<script src="static/javascript/download.js" type="text/javascript"></script>
 {{ footer }}
