--- a/upload/admin/view/template/catalog/information_form.twig
+++ b/upload/admin/view/template/catalog/information_form.twig
@@ -164,9 +164,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('textarea[data-oc-toggle=\'ckeditor\']').ckeditor({
-    language: '{{ ckeditor }}'
-});
-//--></script>
+<script src="static/javascript/information.js" type="text/javascript"></script>
 {{ footer }} 
