--- a/upload/admin/view/template/catalog/product.twig
+++ b/upload/admin/view/template/catalog/product.twig
@@ -115,123 +115,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-
-$('#form-filter').on('submit', function(e) {
-    e.preventDefault();
-
-    let url = $(this).serialize();
-
-    window.history.pushState({}, null, 'index.php?route=catalog/product&user_token={{ user_token }}&' + url);
-
-    $('#list').load('index.php?route=catalog/product.list&user_token={{ user_token }}&' + url);
-});
-
-$('#input-name').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=catalog/product.autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                response($.map(json, function(item) {
-                    return {
-                        label: item['name'],
-                        value: item['product_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        $('#input-name').val(decodeHTMLEntities(item['label']));
-    }
-});
-
-$('#input-model').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=catalog/product.autocomplete&user_token={{ user_token }}&filter_model=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                response($.map(json, function(item) {
-                    return {
-                        label: item['model'],
-                        value: item['product_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        $('#input-model').val(decodeHTMLEntities(item['label']));
-    }
-});
-
-$('#input-category').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=catalog/category.autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                json.unshift({
-                    name: '{{ text_none }}',
-                    category_id: '',
-                });
-
-                response($.map(json, function(item) {
-                    return {
-                        label: item['name'],
-                        value: item['category_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        if (item['value']) {
-            $('#input-category').val(decodeHTMLEntities(item['label']));
-            $('#input-category-id').val(item['value']);
-        } else {
-            $('#input-category').val('');
-            $('#input-category-id').val('');
-        }
-    }
-});
-
-$('#input-manufacturer').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=catalog/manufacturer.autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                json.unshift({
-                    name: '{{ text_none }}',
-                    category_id: '',
-                });
-
-                response($.map(json, function(item) {
-                    return {
-                        label: item['name'],
-                        value: item['manufacturer_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        if (item['value']) {
-            $('#input-manufacturer').val(decodeHTMLEntities(item['label']));
-            $('#input-manufacturer-id').val(item['value']);
-        } else {
-            $('#input-manufacturer').val('');
-            $('#input-manufacturer-id').val('');
-        }
-    }
-});
-//--></script>
+<script src="static/javascript/product.js" type="text/javascript"></script>
 {{ footer }}
