--- a/upload/admin/view/template/marketing/marketing.twig
+++ b/upload/admin/view/template/marketing/marketing.twig
@@ -53,21 +53,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-
-$('#form-filter').on('submit', function(e) {
-    e.preventDefault();
-
-    let url = $(this).serialize();
-
-    window.history.pushState({}, null, 'index.php?route=marketing/marketing&user_token={{ user_token }}&' + url);
-
-    $('#list').load('index.php?route=marketing/marketing.list&user_token={{ user_token }}&' + url);
-});
-//--></script>
+<script src="static/javascript/marketing.js" type="text/javascript"></script>
 {{ footer }}
