--- a/upload/admin/view/template/marketing/marketing_form.twig
+++ b/upload/admin/view/template/marketing/marketing_form.twig
@@ -68,19 +68,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#input-code').on('keyup', function(e) {
-    $('#input-example1').attr('value', '{{ store }}?tracking=' + $('#input-code').val());
-
-    $('#input-example2').attr('value', '{{ store }}index.php?route=common/home&tracking=' + $('#input-code').val());
-});
-
-$('#input-code').trigger('keyup');
-
-$('#report').on('click', '.pagination a', function(e) {
-    e.preventDefault();
-
-    $('#report').load(this.href);
-});
-//--></script>
+<script src="static/javascript/marketing.js" type="text/javascript"></script>
 {{ footer }}
