--- a/upload/admin/view/template/setting/store_form.twig
+++ b/upload/admin/view/template/setting/store_form.twig
@@ -525,26 +525,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#input-theme').on('change', function() {
-    $.ajax({
-        url: 'index.php?route=setting/setting.theme&user_token={{ user_token }}&theme=' + this.value,
-        dataType: 'html',
-        beforeSend: function() {
-            $('#input-theme').prop('disabled', true);
-        },
-        complete: function() {
-            $('#input-theme').prop('disabled', false);
-        },
-        success: function(html) {
-            $('#theme').attr('src', html);
-        },
-        error: function(xhr, ajaxOptions, thrownError) {
-            console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-        }
-    });
-});
-
-$('#input-theme').trigger('change');
-//--></script>
+<script src="static/javascript/setting.js" type="text/javascript"></script>
 {{ footer }} 
