--- a/upload/extension/opencart/catalog/view/template/module/filter.twig
+++ b/upload/extension/opencart/catalog/view/template/module/filter.twig
@@ -19,14 +19,4 @@
     <button type="button" id="button-filter" class="btn btn-primary"><i class="fa-solid fa-filter"></i> {{ button_filter }}</button>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#button-filter').on('click', function() {
-    filter = [];
-
-    $('input[name^=\'filter\']:checked').each(function(element) {
-        filter.push(this.value);
-    });
-
-    location = '{{ action|escape('js') }}&filter=' + filter.join(',');
-});
-//--></script>
+<script src="extension/opencart/view/javascript/filter.js" type="text/javascript"></script>
