--- a/upload/admin/view/template/common/footer.twig
+++ b/upload/admin/view/template/common/footer.twig
@@ -5,5 +5,5 @@
 {% for script in scripts %}
   <script src="{{ script.href }}" type="text/javascript"></script>
 {% endfor %}
-<script src="./view/javascript/webcomponent/webcomponent.js" type="module"></script>
+<script src="../assets/webcomponent/webcomponent.js" type="module"></script>
 </body></html>
