--- a/upload/admin/view/template/localisation/tax_rate_list.twig
+++ b/upload/admin/view/template/localisation/tax_rate_list.twig
@@ -18,7 +18,7 @@
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ tax_rate.tax_rate_id }}" class="form-check-input"/></td>
               <td>{{ tax_rate.name }}</td>
               <td class="text-end">{{ tax_rate.rate }}</td>
-              <td>{{ tax_rate.type }}</td>
+              <td>{% if tax_rate.type == 'F' %}{{ text_amount }}{{ tax_rate.type }}{ text_percent }}{% endif %}</td>
               <td>{{ tax_rate.geo_zone }}</td>
               <td class="text-end"><a href="{{ tax_rate.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
