more code reduction

--- a/upload/admin/view/template/catalog/category_form.twig
+++ b/upload/admin/view/template/catalog/category_form.twig
@@ -204,5 +204,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/category.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/category.js"></script>
 {{ footer }}
