--- a/upload/admin/view/template/catalog/information.twig
+++ b/upload/admin/view/template/catalog/information.twig
@@ -73,5 +73,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/information.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/information.js"></script>
 {{ footer }}
