--- a/upload/admin/view/template/common/authorize_reset.twig
+++ b/upload/admin/view/template/common/authorize_reset.twig
@@ -18,5 +18,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/authorize.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/authorize.js"></script>
 {{ footer }}
