--- a/upload/admin/view/template/common/dashboard.twig
+++ b/upload/admin/view/template/common/dashboard.twig
@@ -32,5 +32,5 @@
   </div>
   {{ security }}
 </div>
-<script src="view/javascript/dashboard.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/dashboard.js"></script>
 {{ footer }}
