--- a/upload/admin/view/template/customer/customer_approval.twig
+++ b/upload/admin/view/template/customer/customer_approval.twig
@@ -72,5 +72,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/customer.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/customer.js"></script>
 {{ footer }}
