--- a/upload/admin/view/template/design/theme_form.twig
+++ b/upload/admin/view/template/design/theme_form.twig
@@ -74,5 +74,5 @@
 <script type="text/javascript" src="view/javascript/codemirror/lib/codemirror.js"></script>
 <script type="text/javascript" src="view/javascript/codemirror/mode/xml/xml.js"></script>
 <script type="text/javascript" src="view/javascript/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-<script src="view/javascript/theme.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/theme.js"></script>
 {{ footer }}
