--- a/upload/admin/view/template/marketing/marketing.twig
+++ b/upload/admin/view/template/marketing/marketing.twig
@@ -53,5 +53,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/marketing.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/marketing.js"></script>
 {{ footer }}
