--- a/upload/admin/view/template/tool/log.twig
+++ b/upload/admin/view/template/tool/log.twig
@@ -49,5 +49,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/log.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/log.js"></script>
 {{ footer }}
