--- a/upload/admin/view/template/tool/upgrade.twig
+++ b/upload/admin/view/template/tool/upgrade.twig
@@ -60,5 +60,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/upgrade.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/upgrade.js"></script>
 {{ footer }}
