--- a/upload/admin/view/template/catalog/download.twig
+++ b/upload/admin/view/template/catalog/download.twig
@@ -19,5 +19,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/download.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/download.js"></script>
 {{ footer }}
