--- a/upload/admin/view/template/catalog/download_form.twig
+++ b/upload/admin/view/template/catalog/download_form.twig
@@ -71,5 +71,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/download.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/download.js"></script>
 {{ footer }}
