--- a/upload/admin/view/template/catalog/product.twig
+++ b/upload/admin/view/template/catalog/product.twig
@@ -115,5 +115,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/product.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/product.js"></script>
 {{ footer }}
