--- a/upload/admin/view/template/catalog/product_form.twig
+++ b/upload/admin/view/template/catalog/product_form.twig
@@ -1183,5 +1183,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/product.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/product.js"></script>
 {{ footer }}
