--- a/upload/admin/view/template/cms/article.twig
+++ b/upload/admin/view/template/cms/article.twig
@@ -78,5 +78,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/article.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/article.js"></script>
 {{ footer }}
