--- a/upload/admin/view/template/common/authorize.twig
+++ b/upload/admin/view/template/common/authorize.twig
@@ -32,6 +32,6 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/authorize.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/authorize.js"></script>
 {{ footer }}
 
