--- a/upload/admin/view/template/common/filemanager.twig
+++ b/upload/admin/view/template/common/filemanager.twig
@@ -8,5 +8,5 @@
       <div class="modal-body">{{ list }}</div>
     </div>
   </div>
-  <script src="view/javascript/filemanager.js" type="text/javascript"></script>
+  <script type="text/javascript" src="view/javascript/filemanager.js"></script>
 </div>
