--- a/upload/admin/view/template/customer/custom_field.twig
+++ b/upload/admin/view/template/customer/custom_field.twig
@@ -29,5 +29,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/custom_field.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/custom_field.js"></script>
 {{ footer }}
