--- a/upload/admin/view/template/customer/custom_field_form.twig
+++ b/upload/admin/view/template/customer/custom_field_form.twig
@@ -166,5 +166,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/custom_field.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/custom_field.js"></script>
 {{ footer }} 
