--- a/upload/admin/view/template/customer/customer.twig
+++ b/upload/admin/view/template/customer/customer.twig
@@ -82,5 +82,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/customer.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/customer.js"></script>
 {{ footer }}
