--- a/upload/admin/view/template/customer/customer_form.twig
+++ b/upload/admin/view/template/customer/customer_form.twig
@@ -361,5 +361,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/customer.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/customer.js"></script>
 {{ footer }}
