--- a/upload/admin/view/template/marketing/affiliate.twig
+++ b/upload/admin/view/template/marketing/affiliate.twig
@@ -92,5 +92,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/affiliate.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/affiliate.js"></script>
 {{ footer }}
