--- a/upload/admin/view/template/marketing/affiliate_form.twig
+++ b/upload/admin/view/template/marketing/affiliate_form.twig
@@ -330,5 +330,5 @@
     </div>
   </div>
 </template>
-<script src="view/javascript/affiliate.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/affiliate.js"></script>
 {{ footer }}
