--- a/upload/admin/view/template/marketing/contact.twig
+++ b/upload/admin/view/template/marketing/contact.twig
@@ -111,5 +111,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/contact.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/contact.js"></script>
 {{ footer }}
