--- a/upload/admin/view/template/marketing/coupon.twig
+++ b/upload/admin/view/template/marketing/coupon.twig
@@ -29,5 +29,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/coupon.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/coupon.js"></script>
 {{ footer }}
