--- a/upload/admin/view/template/marketing/marketing_form.twig
+++ b/upload/admin/view/template/marketing/marketing_form.twig
@@ -68,5 +68,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/marketing.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/marketing.js"></script>
 {{ footer }}
