--- a/upload/admin/view/template/marketplace/api.twig
+++ b/upload/admin/view/template/marketplace/api.twig
@@ -24,4 +24,4 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/api.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/api.js"></script>
