--- a/upload/admin/view/template/marketplace/extension.twig
+++ b/upload/admin/view/template/marketplace/extension.twig
@@ -34,5 +34,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/extension.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/extension.js"></script>
 {{ footer }}
