--- a/upload/admin/view/template/sale/order.twig
+++ b/upload/admin/view/template/sale/order.twig
@@ -89,5 +89,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/order.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/order.js"></script>
 {{ footer }}
