--- a/upload/admin/view/template/sale/returns.twig
+++ b/upload/admin/view/template/sale/returns.twig
@@ -76,5 +76,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/return.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/return.js"></script>
 {{ footer }}
