--- a/upload/admin/view/template/sale/subscription.twig
+++ b/upload/admin/view/template/sale/subscription.twig
@@ -68,5 +68,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/subscription.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/subscription.js"></script>
 {{ footer }}
