--- a/upload/admin/view/template/sale/subscription_info.twig
+++ b/upload/admin/view/template/sale/subscription_info.twig
@@ -386,5 +386,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/subscription.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/subscription.js"></script>
 {{ footer }}
