--- a/upload/admin/view/template/setting/setting.twig
+++ b/upload/admin/view/template/setting/setting.twig
@@ -1254,5 +1254,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/setting.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/setting.js"></script>
 {{ footer }}
