--- a/upload/admin/view/template/user/user_group.twig
+++ b/upload/admin/view/template/user/user_group.twig
@@ -20,5 +20,5 @@
     </div>
   </div>
 </div>
-<script src="view/javascript/user.js" type="text/javascript"></script>
+<script type="text/javascript" src="view/javascript/user.js"></script>
 {{ footer }}
