--- a/upload/admin/view/template/catalog/attribute_list.twig
+++ b/upload/admin/view/template/catalog/attribute_list.twig
@@ -30,7 +30,9 @@
     </table>
   </div>
   <div class="row">
-    <div data-oc-toggle="pagination" data-oc-target="" class="col-sm-6 text-start">{{ pagination }}</div>
+
+    <div data-oc-toggle="pagination" data-oc-target="#list" class="col-sm-6 text-start">{{ pagination }}</div>
+
     <div class="col-sm-6 text-end">{{ results }}</div>
   </div>
 </form>
