more js changes

--- a/upload/admin/view/template/catalog/attribute_list.twig
+++ b/upload/admin/view/template/catalog/attribute_list.twig
@@ -30,9 +30,7 @@
     </table>
   </div>
   <div class="row">
-
-    <div data-oc-toggle="pagination" data-oc-target="#list" class="col-sm-6 text-start">{{ pagination }}</div>
-
+    <div class="col-sm-6 text-start"><x-pagination href="{{ pagination }}" target="#list" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination></div>
     <div class="col-sm-6 text-end">{{ results }}</div>
   </div>
 </form>
