--- a/upload/admin/view/template/cms/comment_list.twig
+++ b/upload/admin/view/template/cms/comment_list.twig
@@ -45,7 +45,7 @@
     </tbody>
   </table>
   <div class="row">
-    <div class="col-sm-6 text-start">{{ pagination }}</div>
+    <div class="col-sm-6 text-start"><x-pagination href="{{ pagination }}" target="#list" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination></div>
     <div class="col-sm-6 text-end">{{ results }}</div>
   </div>
 </form>
