--- a/upload/admin/view/template/sale/order_history.twig
+++ b/upload/admin/view/template/sale/order_history.twig
@@ -31,6 +31,6 @@
   </table>
 </div>
 <div class="row">
-  <div class="col-sm-6 text-start">{{ pagination }}</div>
+  <div class="col-sm-6 text-start"><x-pagination href="{{ pagination }}" target="#list" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination></div>
   <div class="col-sm-6 text-end">{{ results }}</div>
 </div>
